--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "seed": "npx sequelize-cli db:seed:all"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
@@ -31,6 +31,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "sequelize-cli": "^6.6.1",
+    "sqlite3": "^5.1.7",
     "supertest": "^6.3.3"
   },
   "jest": {
