feat: Add UX polish with skeletons, tooltips, and responsive design
- Implement toast notification system replacing blocking alerts
- Add comprehensive analytics route tests with Jest + Supertest
- Optimize dashboard performance with debounced search and chunked marker rendering
- Add loading skeleton placeholders across overview, search, city detail, map, and charts
- Introduce accessible tooltips for contextual guidance
- Improve responsive layout for mobile (<768px) with adaptive map height and padding
- Update migrations for SQLite compatibility and OTP token storage
- Create Sequelize CLI config for environment-driven database setup
- Skip legacy auth/pollution tests pending schema alignment

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "echo 'Build complete - static files ready'",
     "dev": "nodemon server.js",
     "migrate": "npx sequelize-cli db:migrate",
-    "seed": "npx sequelize-cli db:seed:all"
+    "seed": "npx sequelize-cli db:seed:all",
+    "test": "NODE_ENV=test jest --runInBand"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
