Modernize landing page and sync env docs

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,17 @@ DB_PASSWORD=your_password_here
 
 # JWT Secret
 JWT_SECRET=your_jwt_secret_key_here_change_in_production
+JWT_EXPIRY=24h
 
-# Application Settings
-SALT_ROUNDS=10
+# Auth & Security
+BCRYPT_SALT_ROUNDS=12
+
+# Rate limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX=100
+
+# Database Pooling
+DB_POOL_MAX=5
+
+# CORS Configuration (comma separated origins)
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
