Integrate SMTP OTP service into auth flow

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,11 @@ JWT_EXPIRY=24h
 # Auth & Security
 BCRYPT_SALT_ROUNDS=12
 
+# Email (SMTP)
+EMAIL_USER=your_outlook_email@example.com
+EMAIL_PASS=your_outlook_password_or_app_password
+EXPOSE_OTP_CODES=false
+
 # Rate limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX=100
