Enable OTP fallback when SMTP unavailable

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,7 @@ BCRYPT_SALT_ROUNDS=12
 EMAIL_USER=your_outlook_email@example.com
 EMAIL_PASS=your_outlook_password_or_app_password
 EXPOSE_OTP_CODES=false
+ALLOW_OTP_FALLBACK=true
 
 # Rate limiting
 RATE_LIMIT_WINDOW_MS=900000
