--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: air-pollution-tracker-backend
     env: node
     runtime: node
-    buildCommand: "npm ci --omit=dev && npm run build"
+  buildCommand: "npm ci && npm run build && npm prune --omit=dev"
     startCommand: "npm start"
     envVars:
       - key: NODE_ENV
